<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DataVisualization</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="p">Hello \n blank fragment</string>
    <string name="cell_padding">4dp</string>

    <string name="chart_klasifikasi_filter_label">Filter klasifikasi</string>
    <string name="chart_jenis_kelamin_filter_label">Filter Jenis Kelamin</string>
    <string name="chart_ubah_warna_label">Ubah Warna</string>
    <string name="chart_bar_type_label">Klik untuk mengubah jenis diagram</string>


    <string name="login_page_background" tools:ignore="ReferenceType">@drawable/kelola_data_activity_background</string>
    <string name="login_panel_background" tools:ignore="ReferenceType">@drawable/kelola_data_linear_layout_background</string>
    <string name="green_label" tools:ignore="referenceType">@drawable/kelola_data_linear_layout_background</string>

    <string-array name="chart_title">
        <item>Penduduk Usia 15 Tahun Menurut Golongan Umur</item>
        <item>Penduduk Usia 15 Tahun Menurut Pendidikan Terakhir yang Ditamatkan</item>
        <item>Penduduk Usia 15 Tahun Menurut Jenis Kegiatan Selama Seminggu Lalu</item>
        <item>Penduduk Usia 15 Tahun Menurut Lapangan Pekerjaan Utama</item>
        <item>Penduduk Usia 15 Tahun Menurut Status Pekerjaan Utama</item>
        <item>Penduduk Usia 15 Tahun yang Termasuk Pengangguran Terbuka</item>
    </string-array>
</resources>