<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".BarChartFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                />
            <LinearLayout
                android:id="@+id/chart_bar_warna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/chart_bar_warna_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"

                    android:text="@string/chart_ubah_warna_label"
                    android:textColor="@color/white"
                    android:textStyle="bold"

                    android:padding="4dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"

                    android:background="@drawable/kelola_data_linear_layout_background"
                    />
                <GridLayout
                    android:id="@+id/chart_bar_warna_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:rowCount="6"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/chart_bar_jenis_kelamin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="16dp"
                >
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"

                    android:text="@string/chart_jenis_kelamin_filter_label"
                    android:textColor="@color/white"
                    android:textStyle="bold"

                    android:gravity="center"
                    android:padding="4dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"

                    android:background="@drawable/kelola_data_linear_layout_background"
                    />
                <GridLayout
                    android:id="@+id/chart_bar_jenis_kelamin_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:rowCount="2"
                    />
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"

                android:text="@string/chart_bar_type_label"
                android:textColor="@color/white"
                android:textStyle="bold"

                android:padding="4dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"

                android:background="@drawable/kelola_data_linear_layout_background"
                />
            <LinearLayout
                android:id="@+id/chart_bar_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"

                android:orientation="horizontal"
                android:gravity="center|start"
                >
                <ImageButton
                    android:id="@+id/chart_bar_multiple"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/image_button_selector"
                    android:src="@mipmap/mulltiple"
                    android:scaleType="fitCenter"
                    android:layout_marginRight="16dp"
                    />
                <ImageButton
                    android:id="@+id/chart_bar_stacked"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/image_button_selector"
                    android:src="@mipmap/stacked"
                    android:scaleType="fitCenter"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</FrameLayout>