<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ScatterChartFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/chart_scatter_title"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"

                android:gravity="center"
                android:textStyle="bold"
                android:textSize="24dp"
                android:textColor="@color/black"
                />
            <com.github.mikephil.charting.charts.ScatterChart
                android:id="@+id/scatterChart"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginBottom="16dp"
                />
            <LinearLayout
                android:id="@+id/chart_keterangan_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"

                android:orientation="horizontal"
                >

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/chart_keterangan_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:checked="true"
                    android:src="@drawable/add"
                    android:background="@drawable/chart_button_selector"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:text="Lihat Keterangan"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:padding="4dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:checked="true"
                    android:background="@drawable/chart_button_idle"/>
            </LinearLayout>
            <TextView
                android:id="@+id/chart_keterangan"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textColor="@color/black"
                android:textSize="12dp"
                />
            <LinearLayout
                android:id="@+id/chart_adjustment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:id="@+id/chart_scatter_warna"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/chart_scatter_warna_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"

                        android:text="@string/chart_ubah_warna_label"
                        android:textColor="@color/white"
                        android:textStyle="bold"

                        android:padding="4dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"

                        android:background="@drawable/kelola_data_linear_layout_background"
                        />
                    <GridLayout
                        android:id="@+id/chart_scatter_warna_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:rowCount="6"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/chart_scatter_jenis_kelamin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"

                        android:text="@string/chart_jenis_kelamin_filter_label"
                        android:textColor="@color/white"
                        android:textStyle="bold"

                        android:padding="4dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"

                        android:background="@drawable/kelola_data_linear_layout_background"
                        />
                    <GridLayout
                        android:id="@+id/chart_scatter_jenis_kelamin_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:rowCount="2"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/chart_scatter_kategori"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"

                        android:text="@string/chart_klasifikasi_filter_label"
                        android:textColor="@color/white"
                        android:textStyle="bold"

                        android:padding="4dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"

                        android:background="@drawable/kelola_data_linear_layout_background"
                        />
                    <GridLayout
                        android:id="@+id/chart_scatter_kategori_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:rowCount="7"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>